<resources>
    <string name="app_name">Melobit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_songs">New Songs</string>
    <string name="see_all">See all</string>
    <string name="featured_text">Featured</string>
    <string name="trending_artists">Trending Artists</string>
    <string name="top_10_day">Top 10 Day</string>
    <string name="top_10_week">Top 10 Week</string>
</resources>